<resources>
    <string name="app_name">Open Podcast</string>
    <string name="subscribed">Subscribed Podcasts</string>
    <string name="search">Find New Podcasts</string>
    <string name="header_title">Open Podcast</string>
    <string name="search_title">New title or author to search</string>
    <string name="pod_image_description">Image of the podcast</string>
    <string name="more_podcasts">More</string>
    <string name="settings">Settings</string>
    <string name="libraries_used">Libraries Used</string>

    <!--Categories-->
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="comedy">Comedy</string>
    <string name="education">Education</string>
    <string name="games_and_hobbies">Games &amp; Hobbies</string>
    <string name="government_and_organizations">Government &amp; Organizations</string>
    <string name="health">Health</string>
    <string name="kids_and_family">Kids &amp; Family</string>
    <string name="music">Music</string>
    <string name="news_and_politics">News &amp; Politics</string>
    <string name="religion_and_spirituality">Religion &amp; Spirituality</string>
    <string name="science_and_medicine">Science &amp; Medicine</string>
    <string name="society_and_culture">Society &amp; Culture</string>
    <string name="sports_and_rec">Sports &amp; Recreation</string>
    <string name="technology">Technology</string>
    <string name="tv_and_film">TV &amp; Film</string>

    <!--Dialog strings-->
    <string name="delete_episode">Delete Episode</string>
    <string name="close_dialog">Close</string>

    <!--Podcast Settings-->
    <string name="auto_update">Auto Update</string>

    <!--Array strings-->
    <string name="network_connected">Any network</string>
    <string name="network_unmetered">Un-metered network</string>
    <string name="network_metered">Metered network</string>
    <string name="network_not_roaming">Connected to non-roaming network</string>

    <string name="network_wifi">Wifi</string>
    <string name="network_mobile">Mobile</string>

    <!-- Settings strings -->
    <string name="pref_category_storage_title">Storage</string>
    <string name="pref_category_downloads_title">Downloads</string>

    <string name="pref_external">Save to external storage</string>
    <string name="pref_external_sum">Feature not currently working;
        saving to internal storage</string>

    <string name="pref_discoverable">Allow other apps to see episodes downloaded</string>
    <string name="pref_discoverable_sum">Currently not available, should be available next
        update. Default other apps can see episodes downloaded</string>

    <string name="pref_auto_title">Download new episode releases</string>
    <string name="pref_auto_summary">Automatically download new episodes when phone is
        charging (Must also select specific podcasts to auto-update)</string>

    <string name="pref_roaming_title">Download episodes while roaming</string>
    <string name="pref_roaming_summary">Allow episodes to download while roaming (new episodes will
        never auto download while roaming)</string>

    <string name="pref_network_auto_title">Select auto-download network</string>
    <string name="pref_network_auto_summary">Network new episodes can
        automatically be downloaded on</string>

    <string name="pref_network_select_title">Select user download network</string>
    <string name="pref_network_select_summary">Network for episodes user selects to
        download</string>


    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">I am a student working on my second degree,
    which is in Computer Information Systems.
    I have a passion for podcasts, so I made this app to have a free open source podcast player
        on the Android market that isn\'t bloated with ads.
    See the Github for Open-Podcast here: https://github.com/The-Canuck/Open-Podcast.
    Our Privacy Policy can be viewed here: https://sites.google.com/view/open-podcast/home
    </string>

</resources>
