<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_storage"
        android:key="pref_category_storage">

        <SwitchPreference
            android:key="pref_external"
            android:title="@string/pref_external"
            android:summary="@string/pref_external_sum"
            android:selectable="false"
            android:enabled="false"
            android:defaultValue="false"/>

        <SwitchPreference
            android:key="pref_auto_download"
            android:title="@string/pref_auto_title"
            android:summary="@string/pref_auto_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>